cabal-version:   3.0
name:            hasql-mover
version:         0.1.0.0
synopsis:        Hasql migrations library
license:         BSD-3-Clause
license-file:    LICENSE
author:          Mike Ledger
maintainer:      mike@quasimal.com
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:    Hasql.Mover
  build-depends:
    , base
    , bytestring
    , hasql
    , hasql-th
    , hasql-transaction
    , megaparsec
    , optparse-applicative
    , prettyprinter
    , prettyprinter-ansi-terminal
    , PyF
    , sop-core
    , template-haskell
    , text
    , time
    , transformers

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:        -fno-warn-name-shadowing
